# carioca

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  rules.md
backend/: Cargo.toml  package.json  rustfmt.toml
backend/src/: main.rs
backend/src/api/: auth.rs  events.rs  mod.rs  server.rs  ws.rs
backend/src/db/: models.rs  repo.rs
backend/src/engine/: bot.rs  card.rs  combo_finder.rs  deck.rs  game.rs  mod.rs  points.rs  rules.rs
backend/src/matchmaking/: lobby.rs  mod.rs  room.rs
frontend/: eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  dummy.test.ts  index.css  main.tsx
frontend/src/components/: Card.css  Card.tsx  SortingZone.css  SortingZone.tsx
frontend/src/lib/: WebSocketContext.tsx  api.ts  comboDetection.test.ts  comboDetection.ts
frontend/src/pages/: Game.css  Game.tsx  Lobby.tsx  Login.tsx  Register.tsx
